[gd_scene load_steps=5 format=3 uid="uid://dv3mr75vdd7p7"]

[ext_resource type="Script" path="res://MinionTowers/Skeleton/skeleton.gd" id="1_1b3jq"]
[ext_resource type="Texture2D" uid="uid://clrxo3gu4a2ug" path="res://Sprites/Skeleton1.png" id="2_w2jt6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyon6"]
size = Vector2(44, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_a8ev6"]
radius = 100.0

[node name="Skeleton" type="Node2D" groups=["Skeleton"]]
light_mask = 3
visibility_layer = 3
script = ExtResource("1_1b3jq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 0)
texture = ExtResource("2_w2jt6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 28)
shape = SubResource("RectangleShape2D_cyon6")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_a8ev6")

[node name="FireSpawner" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="FireSpawner"]
position = Vector2(0, -12)

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
